Fixed spacing in navigation menu

--- a/client/scss/layout/_navigation.scss
+++ b/client/scss/layout/_navigation.scss
@@ -6,6 +6,10 @@
     font-size: $font-size-primary;
     letter-spacing: $letter-spacing-primary;
     margin-left: 0.5rem;
+    padding-top: 0.375rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-bottom: 0rem;
     text-transform: uppercase;
     &:hover {
       background-color: $color-primary;
@@ -18,7 +22,10 @@
     font-size: $font-size-primary;
     letter-spacing: $letter-spacing-primary;
     margin-left: 0.2rem;
-    padding: 0;
+    padding-top: 0.375rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-bottom: 0rem;
     text-transform: uppercase;
     &:hover,
     &:active {
@@ -33,7 +40,10 @@
     letter-spacing: $letter-spacing-primary;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
-    padding: 0;
+    padding-top: 0.375rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-bottom: 0rem;
     text-transform: uppercase;
     &:hover,
     &:active {
@@ -87,10 +97,12 @@
 
 // ITEM
 .dropdown-item {
-  color: $color-black !important;
+  color: $color-white !important;
   font-family: $font-primary !important;
   font-size: $font-size-primary !important;
   letter-spacing: $letter-spacing-primary !important;
+  padding-top: 0.375rem !important;
+  padding-bottom: 0rem !important;
   &:hover {
     background-color: $color-secondary !important;
   }
@@ -103,4 +115,8 @@
   font-family: $font-primary !important;
   font-size: $font-size-primary !important;
   letter-spacing: $letter-spacing-primary !important;
+  padding-top: 0.375rem !important;
+  padding-left: 0.375rem !important;
+  padding-right: 0.375rem !important;
+  padding-bottom: 0.375rem !important;
 }
