--- a/client/scss/layout/_page.scss
+++ b/client/scss/layout/_page.scss
@@ -25,7 +25,7 @@
     font-size: $font-size-page-subtitle;
     letter-spacing: $letter-spacing-page-title;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
   &__statement {
     line-height: $line-height-page-statement;
